Update PDF converter and summarizer.ipynb

--- a/PDF converter and summarizer.ipynb
+++ b/PDF converter and summarizer.ipynb
@@ -121,12 +121,12 @@
     "    return clean_10_summary\n",
     "\n",
     "   # if __name__=\"apps\":\n",
-    "   #     text=open(r\"E:\\stwork\\iso OutPut\\dec.pdf\")#its a local pdf \n",
+    "   #     text=open(r\"E:\\stwork\\iso OutPut\\ARTICLE.pdf\")#its a local pdf \n",
     "        #text=pdfconverter().ipynb_checkpoints\n",
     "        \n",
     "        #text=pdfminer(DeprecationWarning) \n",
     "    if __name__ == \"__main__\":\n",
-    "        text = pdf_to_text(r'E:\\stwork\\iso OutPut\\Chemistry.pdf')#its a local pdf \n",
+    "        text = pdf_to_text(r'E:\\stwork\\SOME_RANDOM_ARTICLE.pdf')#its a local pdf \n",
     "        #print(text)\n",
     "        summ=summarizer(str(text, 'utf-8'))\n",
     "        #print(str(text, 'utf-8'))\n",
